argocd-manifests/apps/golang-app/overlays/production/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
spec:
  replicas: 6
