argocd-manifests/apps/golang-app/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "argocd-learn-ca-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "prod-golang.argocd-learn.local"
        - "*.argocd-learn.local"
      secretName: production-golang-tls
  rules:
    - host: prod-golang.argocd-learn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-golang-app
                port:
                  number: 80
